--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ html, body {
 }
 
 .main-footer {
-    background-color: #56CCF2;
+    background-color: #FEF9E3;
     color: white;
     padding: 4px 0;
 }
