lots of updates store page started authentication started

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -19,7 +19,7 @@
         <section class="content-section container">
             <h2 class="section-header">ABOUT</h2>
             <p>From the beginning, Piece of Cake Bakery is known as bakery unique for our amazingly made cupcakes and cakes. We take pride in using natural ingredients in our cupcakes, cakes and desserts. Our treats are as deliciously wholesome as they are beautifully decorated. Choose from our signature cupcakes, weekly and holiday specials or custom created desserts.</p>
-            <img class="about-store-image" src="images/photo1jpg.jpeg">
+            <img class="about-store-image" src="../images/photo1jpg.jpeg">
             <p>Piece of Cake Bakery offers a homestyle bakery experience in the Washington area. Our vision is to create upscale, quick-serve bakery with a focus on simple and satisfying souther style desserts and baked goods. Our philosophy is to offer simple and delicious desserts that are easily accessible to clients via location or delivery options. Our ingredients are high quality; each dessert is carefully made with only the finest, all-natural ingredients.</p>
         </section>
         <footer class="main-footer">
@@ -28,17 +28,17 @@
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.twitter.com" target="_blank">
-                            <img src="images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" width="25px" height="25px" alt="twitter">
+                            <img src="../images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" width="25px" height="25px" alt="twitter">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.yelp.com" target="_blank">
-                            <img src="images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
+                            <img src="../images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
-                            <img src="images/Facebook-logo.png" width="25px" height="25px" alt="facebook">
+                            <img src="../images/Facebook-logo.png" width="25px" height="25px" alt="facebook">
                         </a>
                     </li>
                 </ul>
