--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,7 +42,7 @@ html, body {
 
 .main-header {
     background-color: rgba(0, 0, 0, .6);
-    background-image: url("images/intro-1601499029.jpeg");
+    background-image: url("../../images/intro-1601499029.jpeg");
     background-blend-mode: multiply;
     background-size: cover;
     padding-bottom: 30px;
