--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,17 +3,17 @@
     <head>
         <title>Piece of Cake</title>
         <meta name="description" content="This is the description">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/css/style.css" />
     </head>
     <body>
         <header class="main-header">
-            <nav class="nav main-nav">
+            {{!-- <nav class="nav main-nav">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="store.html">STORE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
-            </nav>
+            </nav> --}}
             <h1 class="store-name store-name-large">Piece of Cake</h1>
             <div class="container">
                 <button type="button" class="btn btn-header">Buy Our Products</button>
@@ -35,17 +35,17 @@
                     <ul class="nav footer-nav">
                         <li>
                             <a href="https://www.twitter.com" target="_blank">
-                                <img src="images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" width="25px" height="25px" alt="twitter">
+                                <img src="../images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" width="25px" height="25px" alt="twitter">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.yelp.com" target="_blank">
-                                <img src="images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
+                                <img src="../images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com" target="_blank">
-                                <img src="images/Facebook-logo.png" width="25px" height="25px" alt="facebook">
+                                <img src="../images/Facebook-logo.png" width="25px" height="25px" alt="facebook">
                             </a>
                         </li>
                     </ul>
