more updates on shopping cart and store page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piece of Cake Bakery </title>
+    <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Enter your description here" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <script src="https://checkout.stripe.com/checkout.js" defer></script>
+  <script>
+      var stripePublicKey = {{stripePublicKey}}
+  </script>
+  <script src="/js/store.js" defer></script>
+  <title>Piece of Cake Store</title>
 </head>
 <body>
         {{!-- Nav bar for every page --}}
