--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 </head>
 <body>
         {{!-- Nav bar for every page --}}
-    <nav id="navbar">
+    <!--<nav id="navbar">
         <ul id="navbar-ul">
             <li>
                 <p><a class="link" href="/">Home</a></p>
@@ -39,7 +39,7 @@
             {{/if}}
         </ul>
         <h1 id="nav-header">Piece of Cake Bakery</h1>
-    </nav>
+    </nav>-->
 
     {{{body}}}
     
