--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,13 +7,27 @@
     </head>
     <body>
         <header class="main-header">
-            {{!-- <nav class="nav main-nav">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="store.html">STORE</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                </ul>
-            </nav> --}}
+            <nav class="nav main-nav">
+            <li>
+                <p><a class="link" href="/">Home</a></p>
+            </li>
+                        <li>
+                <p><a class="link" href="/about">About</a></p>
+            </li>
+            {{#if loggedIn}}
+            <li>
+                <p><a class="link" href="/store">Store</a></p>
+            </li>
+            <li>
+                <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
+            </li>
+
+            {{else}}
+            <li>
+                <p><a class="link" href="/login">Login</a></p>
+            </li>
+            {{/if}}
+            </nav>
             <h1 class="store-name store-name-large">Piece of Cake</h1>
             <div class="container">
                 <button type="button" class="btn btn-header">Buy Our Products</button>
