--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -19,11 +19,25 @@
 <body>
   <header class="main-header">
     <nav class="main-nav nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="store.html">Store</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
+            <li>
+                <p><a class="link" href="/">Home</a></p>
+            </li>
+                        <li>
+                <p><a class="link" href="/about">About</a></p>
+            </li>
+            {{#if loggedIn}}
+            <li>
+                <p><a class="link" href="/store">Store</a></p>
+            </li>
+            <li>
+                <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
+            </li>
+
+            {{else}}
+            <li>
+                <p><a class="link" href="/login">Login</a></p>
+            </li>
+            {{/if}}
     </nav>
     <h1 class="band-name band-name-large">Piece of Cake Store</h1>
 </header>
