--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
       var stripePublicKey = {{stripePublicKey}}
   </script>
   <script src="/js/store.js" defer></script>
-  <title>Piece of Cake Store</title>
+  <title>Piece of Cake Bakery</title>
 </head>
 <body>
         {{!-- Nav bar for every page --}}
