images not showing in carousel

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,7 +52,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/public/images/chocolatealmondcroissant.jpg" alt="chocolate almond croissants">
+                        <img class="d-block w-100 img-fluid" src="/public/images/chocolatealmondcroissant.jpg" alt="chocolate almond croissants">
                         <div class="carousel-caption d-none d-md-block">
                             <h3>Try Our Chocolate Almond Croissants!</h3>
                             <p>Makes a perfect snack for any time~</p>
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="/public/images/scones.jpg" alt="scones">
+                        <img class="d-block w-100 img-fluid" src="/public/images/scones.jpg" alt="scones">
                         <div class="carousel-caption d-none d-md-block">
                             <h3>Freshly Baked Daily</h3>
                             <p>Melts in your mouth each time</p>
@@ -68,7 +68,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="/public/images/maplebar.jpg" alt="maple bar">
+                        <img class="d-block w-100 img-fluid" src="/public/images/maplebar.jpg" alt="maple bar">
                         <div class="carousel-caption d-none d-md-block">
                             <h3>Order Online or Come On In!</h3>
                             <p>So many delicious pastries to choose from!</p>
