--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,109 +1,167 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Piece of Cake Bakery</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/style.css">
-        <title>Piece of Cake</title>
-        <!--<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <head>
+    <title>Piece of Cake Bakery</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Piece of Cake</title>
+    <!--<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>-->
-    </head>
-    <body>
-        <header class="main-header">
-            <nav class="nav main-nav">
-            <li>
-                <p><a class="link" href="/">Home</a></p>
-            </li>
-                        <li>
-                <p><a class="link" href="/about">About</a></p>
-            </li>
-            {{#if loggedIn}}
-            <li>
-                <p><a class="link" href="/store">Store</a></p>
-            </li>
-            <li>
-                <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
-            </li>
+  </head>
+  <body>
+    <header class="main-header">
+      <nav class="nav main-nav">
+        <li>
+          <p><a class="link" href="/">Home</a></p>
+        </li>
+        <li>
+          <p><a class="link" href="/about">About</a></p>
+        </li>
+        {{#if loggedIn}}
+          <li>
+            <p><a class="link" href="/store">Store</a></p>
+          </li>
+          <li>
+            <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
+          </li>
 
-            {{else}}
-            <li>
-                <p><a class="link" href="/login">Login</a></p>
-            </li>
-            {{/if}}
-            </nav>
-            <h1 class="store-name store-name-large">Piece of Cake</h1>
-            <div class="text-center">
-                <button type="button" class="btn btn-header">Buy Our Products</button>
+        {{else}}
+          <li>
+            <p><a class="link" href="/login">Login</a></p>
+          </li>
+        {{/if}}
+      </nav>
+      <h1 class="store-name store-name-large">Piece of Cake</h1>
+      <div class="text-center">
+        <button type="button" class="btn btn-header">Buy Our Products</button>
+      </div>
+    </header>
+    <!--carousel-->
+    <section id="carousel">
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <ol class="carousel-indicators">
+          <li
+            data-target="#carouselExampleIndicators"
+            data-slide-to="0"
+            class="active"
+          ></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src="/images/sourdoughloaf.jpg"
+              alt="sourdough First slide"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Try Our Sourdough Loaves!</h3>
+              <p>Makes a perfect snack for whenever</p>
             </div>
-        </header>
-            <!--carousel-->
-        <section id="carousel">
-            <div id="carouselFull" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-targer="carouselIndicators" data-slide-to="0" class="active"></li>
-                    <li data-targer="carouselIndicators" data-slide-to="1"></li>
-                    <li data-targer="carouselIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100 img-fluid" src="/images/sourdoughloaf.jpg" width="250px" alt="sourdough">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Try Our Sourdough Loaves!</h3>
-                            <p>Makes a perfect snack for whenever</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid" src="/images/scones.jpg" width="250px" alt="scones">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Freshly Baked Daily</h3>
-                            <p>Melts in your mouth each time</p>
-                        </div>
-                    </div>
-
-                    <div class="carousel-item">
-                        <img class="d-block w-100 img-fluid" src="/images/maplebar.jpg" width="250px" alt="maple bar">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h3>Order Online or Come On In!</h3>
-                            <p>So many delicious pastries to choose from!</p>
-                        </div>
-                    </div>
-                    <!--carousel buttons-->
-                        <a class="carousel-control-prev" href="#carouselFull" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            </a>
-
-                        <a class="carousel-control-next" href="#carouselFull" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            </a>
-                </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="/images/scones.jpg"
+              alt="scones Second slide"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Freshly Baked Daily</h3>
+              <p>Melts in your mouth each time</p>
             </div>
-        </section>
-            <footer class="main-footer">
-                <div class="container main-footer-container">
-                    <h3 class="store-name">Piece of Cake</h3>
-                    <ul class="nav footer-nav">
-                        <li>
-                            <a href="https://www.twitter.com" target="_blank">
-                                <img src="../images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" width="25px" height="25px" alt="twitter">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.yelp.com" target="_blank">
-                                <img src="../images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com" target="_blank">
-                                <img src="../images/Facebook-logo.png" width="25px" height="25px" alt="facebook">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </footer>
-            <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-        </body>
-    </html>
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="/images/maplebar.jpg"
+              alt="maple bar Third slide"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Order Online or Come On In!</h3>
+              <p>So many delicious pastries to choose from!</p>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleIndicators"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleIndicators"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+    <footer class="main-footer">
+      <div class="container main-footer-container">
+        <h3 class="store-name">Piece of Cake</h3>
+        <ul class="nav footer-nav">
+          <li>
+            <a href="https://www.twitter.com" target="_blank">
+              <img
+                src="../images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png"
+                width="25px"
+                height="25px"
+                alt="twitter"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.yelp.com" target="_blank">
+              <img
+                src="../images/Yelp-Logo.png"
+                width="25px"
+                height="25px"
+                alt="yelp"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com" target="_blank">
+              <img
+                src="../images/Facebook-logo.png"
+                width="25px"
+                height="25px"
+                alt="facebook"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
