--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -64,7 +64,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              class="d-block w-100"
+              class="d-block mx-auto"
               src="/images/sourdoughloaf.jpg"
               alt="sourdough First slide"
             />
@@ -75,8 +75,8 @@
           </div>
           <div class="carousel-item">
             <img
-              class="d-block w-100"
-              src="/images/scones.jpg"
+              class="d-block mx-auto"
+              src="/images/cakedonuts.jpg"
               alt="scones Second slide"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -86,8 +86,8 @@
           </div>
           <div class="carousel-item">
             <img
-              class="d-block w-100"
-              src="/images/maplebar.jpg"
+              class="d-block mx-auto"
+              src="/images/brownies.jpg"
               alt="maple bar Third slide"
             />
             <div class="carousel-caption d-none d-md-block">
