lots of changes to navbars on various pages and buy products button now working

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
       </nav>
       <h1 class="store-name store-name-large">Piece of Cake</h1>
       <div class="text-center">
-        <button type="button" class="btn btn-header">Buy Our Products</button>
+        <a href="/store"><button type="button" class="btn btn-header" id="buy-products">Buy Our Products</button></a>
       </div>
     </header>
     <!--carousel-->
