--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -6,30 +6,33 @@
         <link rel="stylesheet" href="/css/style.css" />
     </head>
     <body>
-        <header class="main-header">
-            <nav class="nav main-nav">
-            <li>
-                <p><a class="link" href="/">Home</a></p>
-            </li>
-                        <li>
-                <p><a class="link" href="/about">About</a></p>
-            </li>
-            {{#if loggedIn}}
-            <li>
-                <p><a class="link" href="/store">Store</a></p>
-            </li>
-            <li>
-                <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
-            </li>
+    <header class="main-header">
+      <nav class="nav main-nav">
+        <li>
+          <p><a class="link" href="/">Home</a></p>
+        </li>
+        <li>
+          <p><a class="link" href="/about">About</a></p>
+        </li>
+        {{#if loggedIn}}
+          <li>
+            <p><a class="link" href="/store">Store</a></p>
+          </li>
+          <li>
+            <p><button id="logout-btn" class="btn-no-style">Logout</button> </p>
+          </li>
 
-            {{else}}
-            <li>
-                <p><a class="link" href="/login">Login</a></p>
-            </li>
-            {{/if}}
-            </nav>
-            <h1 class="store-name store-name-large">Piece of Cake</h1>
-        </header>
+        {{else}}
+          <li>
+            <p><a class="link" href="/login">Login</a></p>
+          </li>
+        {{/if}}
+      </nav>
+      <h1 class="store-name store-name-large">Piece of Cake</h1>
+      <div class="text-center">
+        <a href="/store"><button type="button" class="btn btn-header" id="buy-products">Buy Our Products</button></a>
+      </div>
+    </header>
         <section class="content-section container">
             <h2 class="section-header">ABOUT</h2>
             <p>From the beginning, Piece of Cake Bakery is known as bakery unique for our amazingly made cupcakes and cakes. We take pride in using natural ingredients in our cupcakes, cakes and desserts. Our treats are as deliciously wholesome as they are beautifully decorated. Choose from our signature cupcakes, weekly and holiday specials or custom created desserts.</p>
