added login/signup header to login page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,7 +31,9 @@
             <h1 class="store-name store-name-large">Piece of Cake</h1>
         </header>
 
-
+        <section class="content-section container">
+            <h2 class="section-header">Login/Signup</h2>
+        </section>
    
 
     <div class="container my-5">
