fixes for corousel and footer images along with some other minor tweaks to the design

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -64,7 +64,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              class="d-block mx-auto"
+              class="d-block w-100"
               src="/images/sourdoughloaf.jpg"
               alt="sourdough First slide"
             />
@@ -75,7 +75,7 @@
           </div>
           <div class="carousel-item">
             <img
-              class="d-block mx-auto"
+              class="d-block w-100"
               src="/images/cakedonuts.jpg"
               alt="scones Second slide"
             />
@@ -86,7 +86,7 @@
           </div>
           <div class="carousel-item">
             <img
-              class="d-block mx-auto"
+              class="d-block w-100"
               src="/images/brownies.jpg"
               alt="maple bar Third slide"
             />
@@ -118,14 +118,14 @@
     </section>
     <footer class="main-footer">
       <div class="container main-footer-container">
-        <h3 class="store-name">Piece of Cake</h3>
+ 
         <ul class="nav footer-nav">
           <li>
             <a href="https://www.twitter.com" target="_blank">
               <img
                 src="../images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png"
-                width="25px"
-                height="25px"
+                width="32px"
+                height="32px"
                 alt="twitter"
               />
             </a>
@@ -134,8 +134,8 @@
             <a href="https://www.yelp.com" target="_blank">
               <img
                 src="../images/Yelp-Logo.png"
-                width="25px"
-                height="25px"
+                width="64px"
+                height="36px"
                 alt="yelp"
               />
             </a>
@@ -144,8 +144,8 @@
             <a href="https://www.facebook.com" target="_blank">
               <img
                 src="../images/Facebook-logo.png"
-                width="25px"
-                height="25px"
+                width="64x"
+                height="36px"
                 alt="facebook"
               />
             </a>
