--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,9 +5,15 @@
 }
 
 html, body {
-    margin: 0;
+    margin: 8%;
+    margin-top: 2%;
     padding: 0;
     min-height: 100%;
+    background-color: wheat;
+}
+
+body {
+border: 4px solid black;
 }
 
 .nav ul {
@@ -47,6 +53,7 @@ html, body {
     background-blend-mode: multiply;
     background-size: cover;
     padding-bottom: 30px;
+    border-bottom: 4px solid black;
 }
 .store-name {
     text-align: center;
@@ -91,6 +98,7 @@ html, body {
     background-color: #FEF9E3;
     color: white;
     padding: 2px 0;
+    border-top: 4px solid black
 }
 
 .main-footer-container {
@@ -107,10 +115,10 @@ html, body {
     padding: 0 4px;
 }
 
-.footer-nav img {
-    width: 30px;
-    height: 30px;
-}
+/* .footer-nav img {
+    width: 6%;
+    height: 6%;
+} */
 .btn {
     text-align: center;
     vertical-align: middle;
