stripe is now working and file cleanup/comments done

--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -9,10 +9,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <script src="https://js.stripe.com/v3/" defer></script>
-  <script>
-      var stripePublicKey = {{stripePublicKey}}
-  </script>
-  <script src="store.js" defer></script>
+  <script src="/js/store.js" defer></script>
   <title>Piece of Cake Bakery</title>
 </head>
 
