--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -65,7 +65,7 @@
           <div class="carousel-item active">
             <img
               class="d-block w-100"
-              src="/images/sourdoughloaf.jpg"
+              src="/images/sourdoughloafwide.jpg"
               alt="sourdough First slide"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -76,7 +76,7 @@
           <div class="carousel-item">
             <img
               class="d-block w-100"
-              src="/images/cakedonuts.jpg"
+              src="/images/cakedonutswide.jpg"
               alt="scones Second slide"
             />
             <div class="carousel-caption d-none d-md-block">
@@ -87,7 +87,7 @@
           <div class="carousel-item">
             <img
               class="d-block w-100"
-              src="/images/brownies.jpg"
+              src="/images/brownieswide.jpg"
               alt="maple bar Third slide"
             />
             <div class="carousel-caption d-none d-md-block">
