--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,9 +87,9 @@ border: 4px solid black;
 }
 
 .about-store-image {
-    float: left;
-    height: 300px;
-    width: 300px;
+    /* float: left; */
+    height: 400px;
+    width: 400px;
     margin: 15px;
     border-radius: 50%;
 }
