change filename for pics back

--- a/views/store.handlebars
+++ b/views/store.handlebars
@@ -46,7 +46,7 @@
                 {{#each stores as |store|}}
                     <div class="shop-item" data-item-id="{{store.id}}">
                         <span class="shop-item-title">{{store.title}}</span>
-                        <img class="shop-item-image" src="/images/{{store.img_name}}">
+                        <img class="shop-item-image" src="/images/{{store.imgName}}">
                         <div class="shop-item-details">
                             <span class="shop-item-price">${{store.price}}</span>
                             <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
