--- a/public/css/style.css
+++ b/public/css/style.css
@@ -342,7 +342,7 @@ border: 4px solid black;
     height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1100px) {
     .section-header {
         font-size: 2rem;
     }
@@ -372,5 +372,12 @@ border: 4px solid black;
     }
     .cart-row {
         font-size: 0.75rem;
+    }
+    .btn-danger {
+        font-size: 0.5rem;
+    }
+    .cart-quantity-input {
+        margin-left: 10px;
+        width: 40px;
     }
 }
