--- a/public/css/style.css
+++ b/public/css/style.css
@@ -378,16 +378,19 @@ border: 4px solid black;
         width: 50px;
     }
     .cart-row {
-        font-size: 0.75rem;
+        font-size: 0.6rem;
     }
     .btn-danger {
-        font-size: 0.5rem;
+        font-size: 0.5rem !important;
     }
     .cart-quantity-input {
         margin-left: 10px;
-        width: 40px;
+        width: 30px;
     }
     .main-nav li {
         padding: 0;
+    }
+    .cart-item-title {
+        font-size: 0.5rem;
     }
 }
