--- a/public/css/style.css
+++ b/public/css/style.css
@@ -352,6 +352,12 @@ border: 4px solid black;
     .d-flex {
         flex-direction: column-reverse;
     }
+    .carousel p {
+        font-size: 18px;
+    }
+    .carousel-caption h3 {
+        font-size: 24px;
+    }
 }
 
 @media screen and (max-width: 480px) {
